other/add-node-labels-pod/.chainsaw-test/pod-patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
    foo: bar
  name: pod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
