other/add-node-labels-pod/.chainsaw-test/pod-patched02.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: rab
  labels:
    app: busybox
    foo: bar
  name: pod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
