other/add-node-labels-pod/.chainsaw-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: pod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: rab
  labels:
    app: busybox
  name: pod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
