other/add-node-labels-pod/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-node-labels-pod
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
